k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: john-hemp-website
  labels:
    app: john-hemp-website
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: john-hemp-website
